--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "connected-react-router": "^6.8.0",
     "env-cmd": "^10.1.0",
     "es6-promise": "^4.2.8",
     "history": "^5.0.0",
@@ -20,7 +21,7 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
-    "start": "env-cmd -f .env.dev react-scripts start", 
+    "start": "env-cmd -f .env.dev react-scripts start",
     "start:prod": "env-cmd -f .env.prod react-scripts start",
     "build:dev": "env-cmd -f .env.dev react-scripts build",
     "build:prod": "env-cmd -f .env.prod react-scripts build",
