--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "react-toastify": "^6.0.6"
   },
   "scripts": {
-    "start": "env-cmd -f .env.dev react-scripts start",
-    "start:prod": "env-cmd -f .env.prod react-scripts start",
+    "start": "env-cmd -f .env.prod react-scripts start",
+    "start:dev": "env-cmd -f .env.dev react-scripts start",
     "build": "env-cmd -f .env.prod react-scripts build",
     "build:dev": "env-cmd -f .env.dev react-scripts build", 
     "test": "react-scripts test",
