--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "bezier-easing": "^2.1.0",
     "connected-react-router": "^6.8.0",
     "env-cmd": "^10.1.0",
     "es6-promise": "^4.2.8",
@@ -18,13 +19,14 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-toastify": "^6.0.6"
   },
   "scripts": {
-    "start": "env-cmd -f .env.dev react-scripts start",
-    "start:prod": "env-cmd -f .env.prod react-scripts start",
-    "build:dev": "env-cmd -f .env.dev react-scripts build",
-    "build:prod": "env-cmd -f .env.prod react-scripts build",
+    "start": "env-cmd -f .env.prod react-scripts start",
+    "start:dev": "env-cmd -f .env.dev react-scripts start",
+    "build": "env-cmd -f .env.prod react-scripts build",
+    "build:dev": "env-cmd -f .env.dev react-scripts build", 
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
