--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "build": "env-cmd -f .env.prod react-scripts build",
     "build:dev": "env-cmd -f .env.dev react-scripts build", 
     "aws": "ssh -i keys/MySecurityKeyForAWS.pem ubuntu@ec2-18-218-157-222.us-east-2.compute.amazonaws.com",
+    "remote": "start http://ec2-18-218-157-222.us-east-2.compute.amazonaws.com",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
