--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "env-cmd": "^10.1.0",
     "es6-promise": "^4.2.8",
     "history": "^5.0.0",
+    "http-proxy-middleware": "^1.0.5",
     "numeral": "^2.0.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -26,7 +27,7 @@
     "start": "env-cmd -f .env.prod react-scripts start",
     "start:dev": "env-cmd -f .env.dev react-scripts start",
     "build": "env-cmd -f .env.prod react-scripts build",
-    "build:dev": "env-cmd -f .env.dev react-scripts build", 
+    "build:dev": "env-cmd -f .env.dev react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
